cmake_minimum_required(VERSION 3.21)
project(chapter_02)

set(CMAKE_CXX_STANDARD 11)

add_executable(chapter_02 main.cpp)
add_executable(chapter_02_Book_00 Book_00.cpp)
add_executable(chapter_02_Book_01 Book_01.cpp)
add_executable(chapter_02_Practice_05 Practice_05.cpp)
add_executable(chapter_02_Practice_06 Practice_06.cpp)
add_executable(chapter_02_Practice_07 Practice_07.cpp)
